[gd_scene load_steps=33 format=3 uid="uid://doqpickhbibsx"]

[ext_resource type="Script" path="res://balneario.gd" id="1_js21y"]
[ext_resource type="Texture2D" uid="uid://de5n0eqdi465i" path="res://img/cenario/balneario/senhora.png" id="2_xbuj5"]
[ext_resource type="Texture2D" uid="uid://dwtpytvfpas2a" path="res://img/cenario/balneario/chao-cena1A.png" id="3_5b2h3"]
[ext_resource type="PackedScene" uid="uid://b56pfrbvd7r3d" path="res://dialogue.tscn" id="4_s4g8n"]
[ext_resource type="Texture2D" uid="uid://ca4qbpy8yn6rk" path="res://img/cenario/balneario/balneario-cena1B.png" id="5_x5hel"]
[ext_resource type="Texture2D" uid="uid://cfgpovi8255d7" path="res://img/cenario/balneario/guarda-sol.png" id="6_d1tob"]
[ext_resource type="Texture2D" uid="uid://dun5sumea0me" path="res://img/cenario/balneario/porta.png" id="7_dsvga"]
[ext_resource type="Texture2D" uid="uid://dlou21knliyvf" path="res://img/cenario/balneario/retorno.png" id="8_0txry"]
[ext_resource type="Texture2D" uid="uid://boh8n0oq7eexu" path="res://img/cenario/balneario/lua.png" id="10_tibdl"]
[ext_resource type="PackedScene" uid="uid://46blvwif58os" path="res://inventory.tscn" id="11_5x4vn"]
[ext_resource type="AudioStream" uid="uid://c5nx4kmu8ltf1" path="res://sounds/ambiencia agua.wav" id="13_juypa"]
[ext_resource type="AudioStream" uid="uid://x8ex3h5p1h1g" path="res://sounds/mixkit-fairy-arcade-sparkle-866.wav" id="14_mheyc"]
[ext_resource type="Texture2D" uid="uid://cbfcfffgvinuq" path="res://img/cenario/balneario/arbusto.png" id="15_lbpmf"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yca5o"]
radius = 66.1884
height = 389.988

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7rw6g"]
size = Vector2(1312, 327)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_07hub"]
radius = 40.0
height = 838.0

[sub_resource type="CircleShape2D" id="CircleShape2D_468ot"]
radius = 74.3303

[sub_resource type="CircleShape2D" id="CircleShape2D_f05e5"]
radius = 96.7988

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0mvnf"]
size = Vector2(1296, 305)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nc4s4"]
size = Vector2(348, 174)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42qvd"]
size = Vector2(1306, 260)

[sub_resource type="CircleShape2D" id="CircleShape2D_8dn4k"]
radius = 69.1158

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4tf52"]
radius = 44.8839
height = 248.143

[sub_resource type="RectangleShape2D" id="RectangleShape2D_56acw"]
size = Vector2(1304, 255)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_07h5w"]
size = Vector2(1301, 395)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lc73e"]
radius = 123.0
height = 456.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7s5ag"]
size = Vector2(140, 256.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8cjik"]
size = Vector2(1302, 399)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_paiyi"]
radius = 114.754
height = 623.701

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qmkwn"]
size = Vector2(570.545, 81.3896)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3ybyd"]
radius = 61.0
height = 710.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wj7hj"]
radius = 56.0
height = 732.0

[node name="Balneario" type="Node2D"]
script = ExtResource("1_js21y")

[node name="Inventory" parent="." instance=ExtResource("11_5x4vn")]

[node name="Dialogue" parent="." instance=ExtResource("4_s4g8n")]

[node name="Chao" type="TextureRect" parent="."]
z_index = -500
offset_left = -2.0
offset_right = 1278.0
offset_bottom = 720.0
texture = ExtResource("3_5b2h3")

[node name="Background" type="TextureRect" parent="."]
z_index = -100
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("5_x5hel")

[node name="Guardasol" type="StaticBody2D" parent="."]
position = Vector2(2, 400)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Guardasol"]
position = Vector2(172, 218.667)
rotation = 1.92161
shape = SubResource("CapsuleShape2D_yca5o")

[node name="TextureRect" type="TextureRect" parent="Guardasol"]
offset_left = -5.33333
offset_top = -2.66666
offset_right = 449.667
offset_bottom = 329.333
texture = ExtResource("6_d1tob")

[node name="Obstaculo" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo"]
position = Vector2(646, 153.5)
shape = SubResource("RectangleShape2D_7rw6g")

[node name="Piscina" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Piscina"]
position = Vector2(407, 404)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_07hub")

[node name="Senhora" type="Area2D" parent="."]
position = Vector2(-210, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Senhora"]
position = Vector2(1032, 575)
shape = SubResource("CircleShape2D_468ot")

[node name="StaticBody2D" type="StaticBody2D" parent="Senhora"]
position = Vector2(1002, 344)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Senhora/StaticBody2D"]
position = Vector2(82, 119)
shape = SubResource("CircleShape2D_f05e5")

[node name="TextureRect" type="TextureRect" parent="Senhora"]
z_index = 200
offset_left = 550.0
offset_top = -109.0
offset_right = 1574.0
offset_bottom = 915.0
texture = ExtResource("2_xbuj5")

[node name="Obstaculo2" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo2"]
position = Vector2(638, 142.5)
shape = SubResource("RectangleShape2D_0mvnf")

[node name="Obstaculo21" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo21"]
position = Vector2(1113, 336)
shape = SubResource("RectangleShape2D_nc4s4")

[node name="AguaSound" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("13_juypa")

[node name="ColetaSound" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("14_mheyc")

[node name="Obstaculo3" type="StaticBody2D" parent="."]
visible = false
position = Vector2(0, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo3"]
position = Vector2(643, 120)
shape = SubResource("RectangleShape2D_42qvd")

[node name="Obstaculo31" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo31"]
position = Vector2(148, 333)
shape = SubResource("CircleShape2D_8dn4k")

[node name="Obstaculo32" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo32"]
position = Vector2(785, 348)
rotation = 1.58476
shape = SubResource("CapsuleShape2D_4tf52")

[node name="Obstaculo4" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo4"]
position = Vector2(642, 117.5)
shape = SubResource("RectangleShape2D_56acw")

[node name="Obstaculo5" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo5"]
position = Vector2(640.5, 187.5)
shape = SubResource("RectangleShape2D_07h5w")

[node name="Placa" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Placa"]
position = Vector2(278, 330)
shape = SubResource("CapsuleShape2D_lc73e")

[node name="StaticBody2D" type="StaticBody2D" parent="Placa"]
position = Vector2(149, 190)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Placa/StaticBody2D"]
position = Vector2(129, 132.75)
shape = SubResource("RectangleShape2D_7s5ag")

[node name="Obstaculo6" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstaculo6"]
position = Vector2(641, 189.5)
shape = SubResource("RectangleShape2D_8cjik")

[node name="Fonte" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fonte"]
position = Vector2(449, 389)
rotation = 1.35961
shape = SubResource("CapsuleShape2D_paiyi")

[node name="StaticBody2D" type="StaticBody2D" parent="Fonte"]
position = Vector2(92, 283)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fonte/StaticBody2D"]
position = Vector2(352.466, 63.3594)
rotation = -0.226893
shape = SubResource("RectangleShape2D_qmkwn")

[node name="Lua" type="TouchScreenButton" parent="."]
visible = false
z_index = -3
position = Vector2(888, 10)
scale = Vector2(0.8075, 0.7925)
texture_normal = ExtResource("10_tibdl")

[node name="StaticBody2D" type="StaticBody2D" parent="Lua"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lua/StaticBody2D"]

[node name="Retorno" type="Area2D" parent="."]
position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Retorno"]
position = Vector2(66, 357)
shape = SubResource("CapsuleShape2D_3ybyd")

[node name="TextureButton" type="TouchScreenButton" parent="Retorno"]
z_index = -2
position = Vector2(-30, 277)
texture_normal = ExtResource("8_0txry")

[node name="Porta" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Porta"]
position = Vector2(1243, 348)
shape = SubResource("CapsuleShape2D_wj7hj")

[node name="TextureButton" type="TouchScreenButton" parent="Porta"]
z_index = -2
position = Vector2(1114, 276)
texture_normal = ExtResource("7_dsvga")

[node name="Arbusto" type="TextureRect" parent="."]
z_index = 4090
offset_left = 458.0
offset_top = 468.0
offset_right = 683.0
offset_bottom = 638.0
texture = ExtResource("15_lbpmf")

[connection signal="player_go_to" from="Dialogue" to="." method="_on_dialogue_player_go_to"]
[connection signal="pressed_no" from="Dialogue" to="." method="_on_dialogue_pressed_no"]
[connection signal="pressed_yes" from="Dialogue" to="." method="_on_dialogue_pressed_yes"]
[connection signal="body_entered" from="Senhora" to="." method="_on_senhora_body_entered"]
[connection signal="body_entered" from="Placa" to="." method="_on_placa_body_entered"]
[connection signal="body_entered" from="Fonte" to="." method="_on_fonte_body_entered"]
[connection signal="pressed" from="Lua" to="." method="_on_lua_pressed"]
[connection signal="body_entered" from="Retorno" to="." method="_on_retorno_body_entered"]
[connection signal="body_exited" from="Retorno" to="." method="_on_retorno_body_exited"]
[connection signal="pressed" from="Retorno/TextureButton" to="." method="_on_retorno_pressed"]
[connection signal="body_entered" from="Porta" to="." method="_on_porta_body_entered"]
[connection signal="body_exited" from="Porta" to="." method="_on_porta_body_exited"]
[connection signal="pressed" from="Porta/TextureButton" to="." method="_on_porta_pressed"]
